# godot-animation-verifier

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
skills/verify-animations/: SKILL.md
src/godot_animation_verifier/: analyze.py  capture.py  cli.py  detect_missing.py  frames.py  models.py  suggestions.py  video.py
tests/: conftest.py  generate_fixtures.py  skill_smoke_test.py  test_analyze.py  test_capture.py  test_cli.py  test_detect_missing.py  test_false_positives.py  test_frames.py  test_godot_integration.py  test_godot_scenes.py  test_helpers.py  test_models.py  test_region_attribution.py  test_scale_scenes.py  test_severity.py  test_suggestions.py  test_video.py
tests/godot_project/: project.godot
tests/godot_project/scenes/: auto_quit.gd  missing_fail_opacity_snap.tscn  missing_fail_position_teleport.tscn  missing_fail_size_jump.tscn  missing_pass_smooth_fade.tscn  missing_pass_smooth_slide.tscn  missing_pass_static.tscn
tests/godot_project/scenes/scale/: A01_tiny_static.metadata.json  A01_tiny_static.tscn  A02_small_static.metadata.json  A02_small_static.tscn  A03_large_smooth_slide.metadata.json  A03_large_smooth_slide.tscn  A04_huge_smooth_slide.metadata.json  A04_huge_smooth_slide.tscn  A05_tiny_teleport.metadata.json  A05_tiny_teleport.tscn  A06_small_teleport.metadata.json  A06_small_teleport.tscn  A07_medium_teleport.metadata.json  A07_medium_teleport.tscn  A08_large_teleport.metadata.json  (+227 more)
tests/helpers/: __init__.py  easing.py  frame_builder.py
