[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-animation-verifier"
version = "0.1.0"
description = "Detect missing animations in Godot scenes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "typer>=0.9",
]

[project.urls]
Homepage = "https://github.com/splitatomlabs/godot-animation-verifier"
Repository = "https://github.com/splitatomlabs/godot-animation-verifier"
Issues = "https://github.com/splitatomlabs/godot-animation-verifier/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
godot-animation-verifier = "godot_animation_verifier.cli:app"

[tool.pytest.ini_options]
tmp_path_retention_policy = "none"
addopts = "-m 'not godot'"

[tool.setuptools.packages.find]
where = ["src"]

